--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "husky": "^9.0.11",
     "style-resources-loader": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "vue": "^3.2.13",
