--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "core-js": "^3.8.3",
     "husky": "^9.0.11",
     "style-resources-loader": "^1.5.0",
