--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "prepare": "husky install"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
     "core-js": "^3.8.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
     "style-resources-loader": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "vue": "^3.2.13",
