--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "element-plus": "^2.6.1",
+    "moment": "^2.30.1",
     "style-resources-loader": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "vue": "^3.2.13",
