--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "element-plus": "^2.6.1",
     "moment": "^2.30.1",
     "style-resources-loader": "^1.5.0",
+    "swiper": "^8.1.5",
     "tailwindcss": "^3.4.1",
     "vue": "^3.2.13",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-pdf-embed": "^2.0.2",
     "vue-router": "^4.0.3",
